@startuml Database_Schema_Email_Workflow
!theme aws-orange
title Email Workflow Database Schema

!define TABLE(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define PK(x) <b><color:red>x</color></b>
!define FK(x) <color:blue>x</color>
!define UK(x) <color:green>x</color>

package "Core Invoice Tables" {
    TABLE(invoices, "invoices") {
        PK(id): UUID
        invoice_number: VARCHAR(100)
        vendor_name: VARCHAR(255)
        invoice_date: DATE
        total_amount: DECIMAL(10,2)
        currency: VARCHAR(3)
        UK(status): VARCHAR(50)
        created_at: TIMESTAMP
        updated_at: TIMESTAMP
        processed_by: VARCHAR(255)
        ocr_data: JSONB
        --
        Constraints:
        status IN ('draft', 'processing', 'completed', 'approved', 'rejected')
    }
}

package "Email Workflow Tables" {
    TABLE(email_audit_logs, "email_audit_logs") {
        PK(id): UUID
        FK(invoice_id): UUID
        email_type: VARCHAR(50)
        recipient_email: VARCHAR(255)
        recipient_name: VARCHAR(255)
        subject: VARCHAR(500)
        provider_used: VARCHAR(50)
        status: VARCHAR(50)
        message_id: VARCHAR(255)
        error_details: TEXT
        sent_at: TIMESTAMP
        created_at: TIMESTAMP
        retry_count: INTEGER
        processing_time_ms: INTEGER
        --
        Constraints:
        email_type IN ('editor_notification', 'bauleiter_approval')
        status IN ('pending', 'sent', 'failed', 'retrying')
        provider_used IN ('sendgrid', 'smtp')
    }
    
    TABLE(approval_tokens, "approval_tokens") {
        PK(id): UUID
        FK(invoice_id): UUID
        token_hash: VARCHAR(255)
        action_type: VARCHAR(50)
        user_email: VARCHAR(255)
        created_at: TIMESTAMP
        expires_at: TIMESTAMP
        used_at: TIMESTAMP
        is_valid: BOOLEAN
        ip_address: INET
        user_agent: TEXT
        FK(email_log_id): UUID
        --
        Constraints:
        action_type IN ('approve', 'reject')
        expires_at > created_at
    }
    
    TABLE(workflow_status, "workflow_status") {
        PK(id): UUID
        FK(invoice_id): UUID
        workflow_step: VARCHAR(50)
        status: VARCHAR(50)
        started_at: TIMESTAMP
        completed_at: TIMESTAMP
        assigned_to: VARCHAR(255)
        notes: TEXT
        FK(parent_step_id): UUID
        --
        Constraints:
        workflow_step IN ('editing', 'editor_notification', 'bauleiter_review', 'final_approval')
        status IN ('pending', 'in_progress', 'completed', 'failed', 'skipped')
    }
    
    TABLE(email_templates, "email_templates") {
        PK(id): UUID
        template_name: VARCHAR(100)
        template_type: VARCHAR(50)
        subject_template: VARCHAR(500)
        html_content: TEXT
        text_content: TEXT
        variables: JSONB
        is_active: BOOLEAN
        created_at: TIMESTAMP
        updated_at: TIMESTAMP
        version: INTEGER
        --
        Constraints:
        template_type IN ('editor_notification', 'bauleiter_approval')
    }
    
    TABLE(security_audit_log, "security_audit_log") {
        PK(id): UUID
        event_type: VARCHAR(100)
        FK(invoice_id): UUID
        user_email: VARCHAR(255)
        ip_address: INET
        user_agent: TEXT
        event_details: JSONB
        severity: VARCHAR(20)
        created_at: TIMESTAMP
        session_id: VARCHAR(255)
        --
        Constraints:
        event_type IN ('token_generated', 'token_used', 'token_expired', 'security_violation')
        severity IN ('info', 'warning', 'error', 'critical')
    }
}

package "Configuration Tables" {
    TABLE(email_settings, "email_settings") {
        PK(id): UUID
        setting_name: VARCHAR(100)
        setting_value: TEXT
        setting_type: VARCHAR(50)
        is_encrypted: BOOLEAN
        created_at: TIMESTAMP
        updated_at: TIMESTAMP
        --
        Examples:
        - sendgrid_api_key (encrypted)
        - smtp_host
        - from_email
        - retry_attempts
    }
    
    TABLE(dropdown_options, "dropdown_options") {
        PK(id): UUID
        field_name: VARCHAR(100)
        option_value: VARCHAR(255)
        display_text: VARCHAR(255)
        is_active: BOOLEAN
        sort_order: INTEGER
        created_at: TIMESTAMP
        --
        Examples:
        - status options
        - currency options
        - workflow_step options
    }
}

' Relationships
invoices ||--o{ email_audit_logs : "has many"
invoices ||--o{ approval_tokens : "has many"
invoices ||--o{ workflow_status : "has many"
invoices ||--o{ security_audit_log : "has many"

email_audit_logs ||--o| approval_tokens : "generates"
workflow_status ||--o| workflow_status : "parent_step"

' Indexes and Performance
note right of email_audit_logs
    **Indexes:**
    - invoice_id (FK)
    - recipient_email
    - status
    - sent_at
    - provider_used
    
    **Partitioning:**
    - Partition by sent_at (monthly)
    - Archive old logs
end note

note right of approval_tokens
    **Indexes:**
    - invoice_id (FK)
    - token_hash (unique)
    - user_email
    - expires_at
    - is_valid
    
    **Cleanup Job:**
    - Delete expired tokens daily
    - Archive used tokens
end note

note right of security_audit_log
    **Indexes:**
    - invoice_id (FK)
    - event_type
    - user_email
    - created_at
    - severity
    
    **Retention:**
    - Keep critical events forever
    - Archive info events after 1 year
end note

note bottom of workflow_status
    **Business Rules:**
    - Each invoice follows defined workflow steps
    - Steps can be parallel or sequential
    - Status transitions are logged
    - Rollback capability for failed steps
end note

@enduml
